--- a/src/style.css
+++ b/src/style.css
@@ -26,19 +26,33 @@ body {
 }
 
 .sidebar {
+    position: relative;
     background-color: var(--secondary-color);
     width: 60px;
+    height: 100vh;
     padding: 1rem 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
 }
 
-.sidebar ul {
+.sidebar-top,
+.sidebar-bottom {
     list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar-bottom {
+    margin-top: auto;
 }
 
 .sidebar ul li {
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.sidebar ul li:last-child {
     margin-bottom: 1rem;
 }
 
@@ -55,6 +69,59 @@ body {
 .sidebar ul li a:hover,
 .sidebar ul li a.active {
     background-color: var(--accent-color);
+}
+
+.sidebar.expanded {
+    width: 200px;
+}
+
+.sidebar-bottom.expanded {
+    max-height: 100px;
+}
+
+@media (max-width: 768px) {
+    .app-container {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        width: 100%;
+        height: 60px;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0 1rem;
+    }
+
+    .sidebar-top,
+    .sidebar-bottom {
+        display: flex;
+    }
+
+    .sidebar ul li {
+        margin: 0 0.5rem;
+    }
+
+    .sidebar ul li:last-child {
+        margin-bottom: 0;
+    }
+    .sidebar-bottom.expanded {
+        max-height: 100px;
+    }
+
+    .content {
+        padding: 1rem;
+    }
+    .option-row {
+        grid-template-columns: 1fr;
+    }
+    .input-with-buttons {
+        flex-direction: column;
+        align-items: stretch;
+    }
+    .input-with-buttons button {
+        width: 100%;
+        margin-top: 5px;
+    }
 }
 
 .content {
@@ -185,42 +252,6 @@ button:hover {
     margin-top: 1rem;
     max-height: 200px;
     overflow-y: auto;
-}
-
-@media (max-width: 768px) {
-    .app-container {
-        flex-direction: column;
-    }
-
-    .sidebar {
-        width: 100%;
-        height: 60px;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    .sidebar ul {
-        display: flex;
-    }
-
-    .sidebar ul li {
-        margin: 0 0.5rem;
-    }
-
-    .content {
-        padding: 1rem;
-    }
-    .option-row {
-        grid-template-columns: 1fr;
-    }
-    .input-with-buttons {
-        flex-direction: column;
-        align-items: stretch;
-    }
-    .input-with-buttons button {
-        width: 100%;
-        margin-top: 5px;
-    }
 }
 
 #save-settings {
